Introduction of 'Organisation' entity