@@ -55,17 +55,19 @@ class EntityIdDuplicationHookTest extends AbstractIntegrationTest {
     void prePutInValid() {
         Arrays.stream(EntityType.values())
             .forEach(entityType -> {
-                List<MetaData> allByType = metaDataRepository.findAllByType(entityType.getType());
-                MetaData metaData = allByType.getFirst();
-                //This is allowed
-                this.entityIdDuplicationHook.prePut(null, metaData, apiUser);
-                //Set new unique id
-                ReflectionTestUtils.setField(metaData, "id", UUID.randomUUID().toString());
-                assertThrows(ValidationException.class, () ->
-                    this.entityIdDuplicationHook.prePut(null, metaData, apiUser));
-                ReflectionTestUtils.setField(metaData, "id", null);
-                assertThrows(ValidationException.class, () ->
-                    this.entityIdDuplicationHook.prePost(metaData, apiUser));
+                if (!EntityType.ORG.equals(entityType)) {
+                    List<MetaData> allByType = metaDataRepository.findAllByType(entityType.getType());
+                    MetaData metaData = allByType.get(0);
+                    //This is allowed
+                    this.entityIdDuplicationHook.prePut(null, metaData, apiUser);
+                    //Set new unique id
+                    ReflectionTestUtils.setField(metaData, "id", UUID.randomUUID().toString());
+                    assertThrows(ValidationException.class, () ->
+                        this.entityIdDuplicationHook.prePut(null, metaData, apiUser));
+                    ReflectionTestUtils.setField(metaData, "id", null);
+                    assertThrows(ValidationException.class, () ->
+                        this.entityIdDuplicationHook.prePost(metaData, apiUser));
+                }
             });
 
     }
